--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  font-family: 'Playfair Display', serif; /* Set default body font */
+}
+
+h1 {
+  font-size: 48px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+p {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+[data-tf-live] {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
